--- a/VRChat/48/1031748.html
+++ b/VRChat/48/1031748.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CIP4I5jdT/Yqq0C2bPiCIY8dLlh67WCgJaWtXaHSSOo="></script>
+    "V/Pr/RFRRvP1Szr7BIcFBtRbfmC2qU851bihq1BeabQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　ハロウィンアイテムセット","description":"◆オリジナル3Dモデル ハロウィンアイテムセット\n\n製作者:Ｋ参鬼(けいさんき）\n\n◆概要\nオリジナル3Dモデル ハロウィンアイテムセットです。\nblenderデータを同梱していますので改造修正等もできます。\n\n◆利用規約\n\n　※当モデルデータを利用された方は下記利用規約すべての内容に同意したものとみなされます。\n\n　・当モデルデータの著作権は「Ｋ参鬼」が所有します。\n　・当モデルデータの使用時に著作権表示の必要はありません。\n　・当モデルデータは営利目的での利用が可能です。\n\n◆禁止事項\n\n　・改変の有無にかかわらず、第三者が利用可能な状態での再配布、アップロード。\n　・本モデルの自作発言\n　・他人を不快にさせる目的での使用\n　・公序良俗に反する行為。\n\n◆同梱データ\n\n　・おばけM.fbx\n　・おばけM.blend\n　・おばけMテクスチャ.png\n　・おばけF.fbx\n　・おばけF.blend\n　・おばけFテクスチャ.png\n　・パンプキン籠.fbx\n　・パンプキン籠.blend\n　・パンプキン籠テクスチャ.png\n　・ハロウィン看板.fbx\n　・ハロウィン看板.blend\n　・ハロウィン看板2.fbx\n　・ハロウィン看板2.blend\n　・ハロウィン看板テクスチャ.png\n　・Readme.txt\n\n◆免責事項\n\n　・モデル製作者は当モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません\n\n◆連絡先\n\n　不具合不明点等がありましたら以下に連絡ください。\n　\n　twitter : @ksanki\n　https://twitter.com/ksanki\n\n\n規約 ver.1.0\n","url":"https://booth.pm/ja/items/1031748","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a17f37a6-c78d-44b0-bc94-21a5a6410ec5/i/1031748/7d9504cb-ab11-4915-9c9c-2c3ab03224fe_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CIP4I5jdT/Yqq0C2bPiCIY8dLlh67WCgJaWtXaHSSOo="></script>
+    nonce="V/Pr/RFRRvP1Szr7BIcFBtRbfmC2qU851bihq1BeabQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1031748/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1031748/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
