--- a/VRChat/47/1031447.html
+++ b/VRChat/47/1031447.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6HgT9As3lazJ9DfbWtHfvnp/uUrfZ0TQt3ZaEKcGi4w="></script>
+    "QtSKASJTY1gb6V62RZwuJiXCe5cGzUnior4j5dF8exA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　mk5メカニカルテール","description":"□mk5・メカニカルテール\n\n□メカニカルな尻尾の3Dモデルです。\n3324△ポリゴン。\n自動でくねらせるアニメーション付き、Legacyアニメーション不使用環境に対応しました。\nanimatorのみでループする自動アニメーションを実装しています。\n\n\n□内容\n・mk5tail.fbx　本体\n\n・mk5tail.unitypackage\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n・tail_animation_sumple.mp4　自動アニメーションのサンプル動画\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\n\n\n□自動アニメーションについて\n\nunitypackageインポート後に生成されるmk5tailフォルダ内にある「mk5tailpac」という名称のprefabには\n自動アニメーションが適用済みとなります。\nそのままアバターの階層内に設置して頂ければ作動します。\n\n付属のmp4ファイルが自動アニメーションのサンプルになります。（動画のものとはシェーダー等が異なります）\n\n\n□利用規約\n\n配布行為そのものを目的とした再配布を禁じます。\n(自作のモデルの一部に組み込む等の場合は可)\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n更新履歴：\n\n2021/05/05　含まれるファイルに問題があった為更新","url":"https://booth.pm/ja/items/1031447","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1031447/822d4396-47ae-4cd4-917b-c667c96e1c31_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6HgT9As3lazJ9DfbWtHfvnp/uUrfZ0TQt3ZaEKcGi4w="></script>
+    nonce="QtSKASJTY1gb6V62RZwuJiXCe5cGzUnior4j5dF8exA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1031447/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1031447/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
