--- a/VRChat/36/1031236.html
+++ b/VRChat/36/1031236.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mo2EgKMPhk8Avzu90iGY87H14CVhrUsHP2B7egnwMcc="></script>
+    "UAw2AjLf7T7v5aZQkjoDOLQKY+35hnuLndH9Jc6jhkQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シンプルなサーベル","description":"初武器になるのかな？\nシンプルなサーベルです。vrcでご自由にお使いください！！\nサイズに関しては申し訳ございませんが大きいので調整してください\n\n※動画とかyoutubeにのるやつとかとくにありませんが、万が一問題が起きた場合は責任を保証することができませんご理解いただけると幸いです。","url":"https://booth.pm/ja/items/1031236","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1031236/07af0ca5-af9a-4cfd-b777-be28fce538d1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mo2EgKMPhk8Avzu90iGY87H14CVhrUsHP2B7egnwMcc="></script>
+    nonce="UAw2AjLf7T7v5aZQkjoDOLQKY+35hnuLndH9Jc6jhkQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1031236/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1031236/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
